Stop images displaying on mobile layout
Temporarily stop images displaying on mobile layout. Will remove later.

--- a/css/this.css
+++ b/css/this.css
@@ -22,6 +22,13 @@ section {
 
 }
 
+img {
+
+margin-left: 15px;
+display: none;
+
+}
+
 /* typography */
 
 h1 {
@@ -255,6 +262,12 @@ footer{
   overflow: hidden;
   margin-top: 15px;
 
+}
+
+img {
+
+  margin-left: 0px;
+  display: block;
 }
 
 }
